// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render thumb and tag slot correctly 1`] = `
<div class="r-card">
  <div class="r-card__header">
    <a class="r-card__thumb">
      Custom Thumb
      <div class="r-card__tag">
        Custom Tag
      </div>
    </a>
    <div class="r-card__content">
      <div>
      </div>
    </div>
  </div>
</div>
`;

exports[`should render bottom slot correctly 1`] = `
<div class="r-card">
  <div class="r-card__header">
    <div class="r-card__content">
      <div>
      </div>
      <div class="r-card__bottom">
        Custom Bottom
      </div>
    </div>
  </div>
</div>
`;

exports[`should render origin-price slot correctly 1`] = `
<div class="r-card">
  <div class="r-card__header">
    <div class="r-card__content">
      <div>
      </div>
      <div class="r-card__bottom">
        <div class="r-card__origin-price">
          Custom Origin Price
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`should render price and num slot correctly 1`] = `
<div class="r-card">
  <div class="r-card__header">
    <div class="r-card__content">
      <div>
      </div>
      <div class="r-card__bottom">
        <div class="r-card__price">
          Custom Price
        </div>
        <div class="r-card__num">
          Custom Num
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`should render price and price-top slot correctly 1`] = `
<div class="r-card">
  <div class="r-card__header">
    <div class="r-card__content">
      <div>
      </div>
      <div class="r-card__bottom">
        Custom Price-top
        <div class="r-card__price">
          Custom Price
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`should render title and desc slot correctly 1`] = `
<div class="r-card">
  <div class="r-card__header">
    <div class="r-card__content">
      <div>
        Custom TitleCustom desc
      </div>
    </div>
  </div>
</div>
`;
